--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ fastapi
 uvicorn
 python-dotenv
 langchain
-openai>=1.0.0
-google-generativeai
+openai>=0.27.0
+google.genai
 sqlmodel
 databases[sqlite]
 requests
@@ -16,3 +16,6 @@ langchain-community
 sentence-transformers
 langchain-chroma
 numpy
+genai==2.1.0
+
+
