--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi
 uvicorn
 python-dotenv
 langchain
-openai>=0.27.0
+openai==1.86.0
 google.genai
 sqlmodel
 databases[sqlite]
@@ -16,6 +16,6 @@ langchain-community
 sentence-transformers
 langchain-chroma
 numpy
-genai==2.1.0
+
 
 
